--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
         <h1>our services</h1>
         <div class="row">
             <div class="service">
-                <h2>web design</h2>
+                <h2>fashion design</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>marketing</h2>
+                <h2>shoe making</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>graphics</h2>
+                <h2>baking</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>data analysis</h2>
+                <h2>hair dressing</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>app development</h2>
+                <h2>printing</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>accounting</h2>
+                <h2>barbing</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>payroll</h2>
+                <h2>bead making</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="service">
-                <h2>networking</h2>
+                <h2>soap/sanitizer making</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
         </div>
